fix: tooltip z-index 500

--- a/src/component/Tooltip/index.scss
+++ b/src/component/Tooltip/index.scss
@@ -8,7 +8,7 @@
       display: flex;
       align-items: center;
       position: absolute;
-      z-index: 1;
+      z-index: 500;
       top: calc(100% + 4px);
       left: 50%;
       transform: translateX(-50%);
